# ChitterChat

./: CMakeLists.txt  README.md
3rd/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
3rd/ffmpeg/share/doc/ffmpeg/: developer.html  ffmpeg-all.html  ffmpeg-bitstream-filters.html  ffmpeg-codecs.html  ffmpeg-devices.html  ffmpeg-filters.html  ffmpeg-formats.html  ffmpeg-protocols.html  ffmpeg-resampler.html  ffmpeg-scaler.html  ffmpeg-utils.html  ffmpeg.html  ffprobe-all.html  ffprobe.html  git-howto.html  libavcodec.html  libavdevice.html  libavfilter.html  libavformat.html  libavutil.html  libswresample.html  libswscale.html  mailing-list-faq.html  platform.html
ChatCpp/: CMakeLists.txt  main.cpp
ChatCpp/3rd/SDL2/include/: SDL_pixels.h
ChatCpp/3rd/ffmpeg/include/libavcodec/: avcodec.h
ChatCpp/src/app/: CMakeLists.txt
ChatCpp/src/video/: CMakeLists.txt
build-ChitterChat-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
build-ChitterChat-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-5a9403f2826e0420680c.json  cmakeFiles-v1-aead2d64b33b66e0f347.json  codemodel-v2-af39cfd2733d11a3c944.json  directory-.-Debug-1a86ebfad726057cb37c.json  index-2023-07-29T08-33-03-0573.json  target-ChitterChat-Debug-096ab74797fb58c1fb9c.json  target-ChitterChat_autogen-Debug-7d5cf1e7fbcd9eacb95f.json  target-ChitterChat_autogen_timestamp_deps-Debug-5333d44cf43dae7ed5bc.json
build-ChitterChat-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-ChitterChat-Desktop_Qt_6_5_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
src/app/: CMakeLists.txt  main.cpp
src/app/data/: accountdata.cpp  accountdata.h  userdata.cpp  userdata.h
src/app/ui/: mainwindow.ui
src/app/ui/login/: founddialog.cpp  founddialog.h  founddialog.ui  logindialog.cpp  logindialog.h  logindialog.ui  registerdialog.cpp  registerdialog.ui
src/duomee/: CMakeLists.txt
src/duomee/base/: eventmanager.cpp  eventmanager.h  filemanager.cpp  filemanager.h  logmanager.cpp  logmanager.h
src/duomee/event/: eventmanager.cpp  eventmanager.h
src/duomee/ui/: commonToast.cpp  commonToast.h  commonToast.ui  commondialog.cpp  commondialog.h  commondialog.ui  commonhead.cpp  commonhead.h  commonhead.ui
